добаленна подсветка елки + сугробы (не используются)

--- a/index.html
+++ b/index.html
@@ -10,23 +10,6 @@
   <body>
     <div class="container"> 
       <div class="general">        
-        <div class="start-wrapper">
-          <div class="star-center-side"></div>
-          <div class="star-center-side"></div>
-          <div class="star-center-side"></div>
-          <div class="star-center-side"></div>
-          <div class="star-center-side"></div>
-          <div class="side">
-            <div class="star-side"></div>
-            <div class="star-side"></div>
-            <div class="star-side"></div>
-          </div>
-          <div class="side back">
-            <div class="star-side"></div>
-            <div class="star-side"></div>
-            <div class="star-side"></div>
-          </div>
-        </div>
         <div class="second-tree">
           <div class="row">
             <div class="tree-side-el"></div>
@@ -127,273 +110,41 @@
             <div class="tree-side-el"></div>
           </div>
         </div>
-        <div class="second-tree second">
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
+        <div class="drift-wrapper">
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
         </div>
-        <div class="second-tree tree">
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
+        <div class="drift-wrapper">
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
         </div>
-        <div class="second-tree four">
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
+        <div class="drift-wrapper">
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
         </div>
-        <div class="second-tree five">
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
-          <div class="row">
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-            <div class="tree-side-el"></div>
-          </div>
+        <div class="drift-wrapper">
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+        </div>
+        <div class="drift-wrapper">
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+        </div>
+        <div class="drift-wrapper">
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
+          <div class="drift-side"></div>
         </div>
       </div>
     </div>
